// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tool-definitions snapshot (regression net for refactor) > COS_EXTENSION_TOOL_DEFINITIONS preserves tool names and source order 1`] = `
[
  "assess_operations",
  "get_pillar_detail",
  "build_pillar",
  "update_pillar_status",
  "get_person_model",
  "list_person_models",
  "start_person_ingestion",
  "update_person_model",
  "create_team_member",
  "list_team_members",
  "update_team_member",
  "assign_guide_agent",
  "draft_cloud_invite",
  "send_cloud_invite",
  "list_member_tasks",
  "activate_guide_persona",
  "activate_persona",
  "deactivate_persona",
  "get_active_persona",
  "propose_first_month_plan",
  "accept_onboarding_plan",
  "get_onboarding_plan",
  "list_onboarding_plans",
  "get_transition_status",
  "override_transition_stage",
  "detect_task_patterns",
  "get_time_saved",
  "route_task",
  "get_routing_recommendations",
  "get_workload_balance",
  "record_routing_outcome",
  "get_task_augmentation",
  "trigger_pre_work",
  "get_human_growth",
  "get_skill_paths",
  "create_skill_path",
  "get_team_health",
  "get_delegation_metrics",
  "record_skill_assessment",
  "get_work_patterns",
  "get_time_allocation",
  "detect_automation_opportunities",
  "get_observation_insights",
  "get_cross_pollination",
  "schedule_team_council",
  "get_collective_briefing",
  "rebalance_workload",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > LSP_TOOL_DEFINITIONS preserves tool names and source order 1`] = `
[
  "lsp_diagnostics",
  "lsp_hover",
  "lsp_go_to_definition",
  "lsp_references",
  "lsp_completions",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > ORCHESTRATOR_TOOL_DEFINITIONS preserves tool names and source order 1`] = `
[
  "llm",
  "get_daemon_info",
  "update_plan",
  "list_agents",
  "update_agent_status",
  "list_tasks",
  "get_task_detail",
  "get_pending_approvals",
  "approve_task",
  "reject_task",
  "run_agent",
  "spawn_agents",
  "await_agent_results",
  "queue_task",
  "retry_task",
  "cancel_task",
  "save_deliverable",
  "list_deliverables",
  "get_workspace_stats",
  "get_activity_feed",
  "list_workflows",
  "run_workflow",
  "get_workflow_detail",
  "generate_workflow",
  "create_workflow",
  "update_workflow",
  "delete_workflow",
  "list_workflow_triggers",
  "create_workflow_trigger",
  "update_workflow_trigger",
  "delete_workflow_trigger",
  "get_agent_schedules",
  "update_agent_schedule",
  "list_projects",
  "create_project",
  "update_project",
  "get_project_board",
  "move_task_column",
  "list_goals",
  "create_goal",
  "update_goal",
  "link_task_to_goal",
  "link_project_to_goal",
  "get_agent_state",
  "set_agent_state",
  "list_agent_state",
  "delete_agent_state",
  "clear_agent_state",
  "list_a2a_connections",
  "send_a2a_task",
  "test_a2a_connection",
  "list_peers",
  "delegate_to_peer",
  "ask_peer",
  "list_peer_agents",
  "connect_whatsapp",
  "disconnect_whatsapp",
  "get_whatsapp_status",
  "update_whatsapp_chat",
  "send_whatsapp_message",
  "list_whatsapp_chats",
  "list_whatsapp_connections",
  "add_whatsapp_chat",
  "remove_whatsapp_chat",
  "get_whatsapp_messages",
  "send_telegram_message",
  "list_telegram_chats",
  "list_telegram_connections",
  "get_business_pulse",
  "get_body_state",
  "get_contact_pipeline",
  "get_daily_reps_status",
  "list_contacts",
  "create_contact",
  "update_contact",
  "log_contact_event",
  "search_contacts",
  "scrape_url",
  "scrape_bulk",
  "scrape_search",
  "deep_research",
  "transcribe_audio",
  "start_meeting_listener",
  "stop_meeting_listener",
  "get_meeting_notes",
  "youtube_transcript",
  "read_rss_feed",
  "github_search",
  "ocr_extract_text",
  "analyze_image",
  "delegate_subtask",
  "run_sequence",
  "evolve_task",
  "discover_capabilities",
  "propose_automation",
  "create_automation",
  "get_agent_suggestions",
  "list_available_presets",
  "setup_agents",
  "bootstrap_workspace",
  "generate_slides",
  "export_slides_pdf",
  "generate_music",
  "generate_video",
  "generate_voice",
  "list_knowledge",
  "upload_knowledge",
  "add_knowledge_from_url",
  "assign_knowledge",
  "delete_knowledge",
  "search_knowledge",
  "get_knowledge_document",
  "wiki_list_pages",
  "wiki_read_page",
  "wiki_write_page",
  "wiki_read_log",
  "wiki_read_index",
  "wiki_lint",
  "wiki_page_history",
  "wiki_curate",
  "x_compose_tweet",
  "x_compose_thread",
  "x_compose_article",
  "x_list_dms",
  "x_send_dm",
  "x_scan_posts",
  "x_compose_reply",
  "x_delete_reply",
  "threads_compose_post",
  "threads_compose_thread",
  "threads_read_profile",
  "threads_scan_posts",
  "threads_compose_reply",
  "threads_delete_reply",
  "synthesize_skill_for_goal",
  "synthesis_run_acceptance",
  "x_delete_tweet",
  "list_connectors",
  "add_connector",
  "remove_connector",
  "sync_connector",
  "test_connector",
  "pdf_inspect_fields",
  "pdf_fill_form",
  "cloud_list_contacts",
  "cloud_list_schedules",
  "cloud_list_agents",
  "cloud_list_tasks",
  "cloud_get_analytics",
  "cloud_list_members",
  "openclaw_list_skills",
  "openclaw_import_skill",
  "openclaw_remove_skill",
  "openclaw_audit_skill",
  "resync_workspace_to_cloud",
  "investigate_shell",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > always-included set (filter with empty intent) 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('agents') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "approve_task",
  "ask_peer",
  "assess_operations",
  "assign_guide_agent",
  "await_agent_results",
  "bootstrap_workspace",
  "build_pillar",
  "cancel_task",
  "clear_agent_state",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_automation",
  "create_skill_path",
  "create_team_member",
  "create_workflow",
  "create_workflow_trigger",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "delegate_to_peer",
  "delete_agent_state",
  "delete_workflow",
  "delete_workflow_trigger",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "discover_capabilities",
  "draft_cloud_invite",
  "evolve_task",
  "export_slides_pdf",
  "generate_music",
  "generate_slides",
  "generate_video",
  "generate_voice",
  "generate_workflow",
  "get_active_persona",
  "get_agent_schedules",
  "get_agent_state",
  "get_agent_suggestions",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_pending_approvals",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_task_detail",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workflow_detail",
  "get_workload_balance",
  "github_search",
  "list_a2a_connections",
  "list_agent_state",
  "list_agents",
  "list_available_presets",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_peer_agents",
  "list_peers",
  "list_person_models",
  "list_tasks",
  "list_team_members",
  "list_workflow_triggers",
  "list_workflows",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_automation",
  "propose_first_month_plan",
  "queue_task",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "reject_task",
  "remove_connector",
  "resync_workspace_to_cloud",
  "retry_task",
  "route_task",
  "run_agent",
  "run_sequence",
  "run_workflow",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_a2a_task",
  "send_cloud_invite",
  "set_agent_state",
  "setup_agents",
  "spawn_agents",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_a2a_connection",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_schedule",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "update_workflow",
  "update_workflow_trigger",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('agents', maxPriority=1) is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "approve_task",
  "assign_guide_agent",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "draft_cloud_invite",
  "get_active_persona",
  "get_daemon_info",
  "get_onboarding_plan",
  "get_person_model",
  "get_task_detail",
  "list_agents",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_tasks",
  "list_team_members",
  "propose_first_month_plan",
  "run_agent",
  "scrape_url",
  "send_cloud_invite",
  "start_person_ingestion",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "update_person_model",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_tweet",
  "x_list_dms",
  "x_send_dm",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('agents', maxPriority=2) is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "approve_task",
  "assess_operations",
  "assign_guide_agent",
  "await_agent_results",
  "build_pillar",
  "cancel_task",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_automation",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "discover_capabilities",
  "draft_cloud_invite",
  "evolve_task",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_agent_suggestions",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_pending_approvals",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_task_detail",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_agents",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_tasks",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_automation",
  "propose_first_month_plan",
  "queue_task",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "reject_task",
  "remove_connector",
  "resync_workspace_to_cloud",
  "retry_task",
  "route_task",
  "run_agent",
  "run_sequence",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "spawn_agents",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('agents', maxPriority=3) is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "approve_task",
  "ask_peer",
  "assess_operations",
  "assign_guide_agent",
  "await_agent_results",
  "bootstrap_workspace",
  "build_pillar",
  "cancel_task",
  "clear_agent_state",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_automation",
  "create_skill_path",
  "create_team_member",
  "create_workflow",
  "create_workflow_trigger",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "delegate_to_peer",
  "delete_agent_state",
  "delete_workflow",
  "delete_workflow_trigger",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "discover_capabilities",
  "draft_cloud_invite",
  "evolve_task",
  "export_slides_pdf",
  "generate_music",
  "generate_slides",
  "generate_video",
  "generate_voice",
  "generate_workflow",
  "get_active_persona",
  "get_agent_schedules",
  "get_agent_state",
  "get_agent_suggestions",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_pending_approvals",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_task_detail",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workflow_detail",
  "get_workload_balance",
  "github_search",
  "list_a2a_connections",
  "list_agent_state",
  "list_agents",
  "list_available_presets",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_peer_agents",
  "list_peers",
  "list_person_models",
  "list_tasks",
  "list_team_members",
  "list_workflow_triggers",
  "list_workflows",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_automation",
  "propose_first_month_plan",
  "queue_task",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "reject_task",
  "remove_connector",
  "resync_workspace_to_cloud",
  "retry_task",
  "route_task",
  "run_agent",
  "run_sequence",
  "run_workflow",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_a2a_task",
  "send_cloud_invite",
  "set_agent_state",
  "setup_agents",
  "spawn_agents",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_a2a_connection",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_schedule",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "update_workflow",
  "update_workflow_trigger",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('browser') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_bulk",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('business') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_contact",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_body_state",
  "get_business_pulse",
  "get_collective_briefing",
  "get_contact_pipeline",
  "get_cross_pollination",
  "get_daemon_info",
  "get_daily_reps_status",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_contacts",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "log_contact_event",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "search_contacts",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_contact",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('channels') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "add_whatsapp_chat",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "connect_whatsapp",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "disconnect_whatsapp",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_whatsapp_messages",
  "get_whatsapp_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "list_telegram_chats",
  "list_telegram_connections",
  "list_whatsapp_chats",
  "list_whatsapp_connections",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "remove_whatsapp_chat",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "send_telegram_message",
  "send_whatsapp_message",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "update_whatsapp_chat",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('desktop') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('dev') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "investigate_shell",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "lsp_completions",
  "lsp_diagnostics",
  "lsp_go_to_definition",
  "lsp_hover",
  "lsp_references",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('filesystem') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "lsp_completions",
  "lsp_diagnostics",
  "lsp_go_to_definition",
  "lsp_hover",
  "lsp_references",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('memory') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('project_instructions') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('projects') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_goal",
  "create_project",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_project_board",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "link_project_to_goal",
  "link_task_to_goal",
  "list_connectors",
  "list_deliverables",
  "list_goals",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_projects",
  "list_team_members",
  "llm",
  "move_task_column",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_goal",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_project",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('pulse') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_activity_feed",
  "get_body_state",
  "get_business_pulse",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_daily_reps_status",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "get_workspace_stats",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('rag') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "add_knowledge_from_url",
  "assess_operations",
  "assign_guide_agent",
  "assign_knowledge",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "delete_knowledge",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_knowledge_document",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_knowledge",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_bulk",
  "scrape_search",
  "scrape_url",
  "search_knowledge",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "transcribe_audio",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "upload_knowledge",
  "wiki_curate",
  "wiki_lint",
  "wiki_list_pages",
  "wiki_page_history",
  "wiki_read_index",
  "wiki_read_log",
  "wiki_read_page",
  "wiki_write_page",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > filterToolsByIntent('vision') is stable 1`] = `
[
  "accept_onboarding_plan",
  "activate_guide_persona",
  "activate_persona",
  "add_connector",
  "analyze_image",
  "assess_operations",
  "assign_guide_agent",
  "build_pillar",
  "cloud_get_analytics",
  "cloud_list_agents",
  "cloud_list_contacts",
  "cloud_list_members",
  "cloud_list_schedules",
  "cloud_list_tasks",
  "create_skill_path",
  "create_team_member",
  "deactivate_persona",
  "deep_research",
  "delegate_subtask",
  "detect_automation_opportunities",
  "detect_task_patterns",
  "draft_cloud_invite",
  "generate_music",
  "generate_video",
  "generate_voice",
  "get_active_persona",
  "get_collective_briefing",
  "get_cross_pollination",
  "get_daemon_info",
  "get_delegation_metrics",
  "get_human_growth",
  "get_meeting_notes",
  "get_observation_insights",
  "get_onboarding_plan",
  "get_person_model",
  "get_pillar_detail",
  "get_routing_recommendations",
  "get_skill_paths",
  "get_task_augmentation",
  "get_team_health",
  "get_time_allocation",
  "get_time_saved",
  "get_transition_status",
  "get_work_patterns",
  "get_workload_balance",
  "github_search",
  "list_connectors",
  "list_deliverables",
  "list_member_tasks",
  "list_onboarding_plans",
  "list_person_models",
  "list_team_members",
  "llm",
  "ocr_extract_text",
  "openclaw_audit_skill",
  "openclaw_import_skill",
  "openclaw_list_skills",
  "openclaw_remove_skill",
  "override_transition_stage",
  "pdf_fill_form",
  "pdf_inspect_fields",
  "propose_first_month_plan",
  "read_rss_feed",
  "rebalance_workload",
  "record_routing_outcome",
  "record_skill_assessment",
  "remove_connector",
  "resync_workspace_to_cloud",
  "route_task",
  "save_deliverable",
  "schedule_team_council",
  "scrape_search",
  "scrape_url",
  "send_cloud_invite",
  "start_meeting_listener",
  "start_person_ingestion",
  "stop_meeting_listener",
  "sync_connector",
  "synthesis_run_acceptance",
  "synthesize_skill_for_goal",
  "test_connector",
  "threads_compose_post",
  "threads_compose_reply",
  "threads_compose_thread",
  "threads_delete_reply",
  "threads_read_profile",
  "threads_scan_posts",
  "transcribe_audio",
  "trigger_pre_work",
  "update_agent_status",
  "update_person_model",
  "update_pillar_status",
  "update_plan",
  "update_team_member",
  "x_compose_article",
  "x_compose_reply",
  "x_compose_thread",
  "x_compose_tweet",
  "x_delete_reply",
  "x_delete_tweet",
  "x_list_dms",
  "x_scan_posts",
  "x_send_dm",
  "youtube_transcript",
]
`;

exports[`tool-definitions snapshot (regression net for refactor) > union catalog tool count 1`] = `
{
  "cosExtension": 47,
  "lsp": 5,
  "orchestrator": 156,
  "union": 208,
}
`;
